Closed Bug 1754940 Opened 2 years ago Closed 2 years ago

Content process alternate winstation should depend on non-native theming

Categories

(Core :: Security: Process Sandboxing, defect, P1)

All
Windows
defect

Tracking

()

VERIFIED FIXED
99 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox97 --- unaffected
firefox98 + verified
firefox99 --- verified

People

(Reporter: bobowen, Assigned: bobowen)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Bug 1151941 changed to use an alternate windows station as well as an alternate desktop.
However this depends on non-native theming, so we will make the alternate winstation depend on that.

However we are working on enabling win32k lockdown (a much more important security measure) in the content process and this also depends on non-native theming.
So, we will soon make that override the non-native theming pref.

Has Regression Range: --- → yes
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/9152dd083f41
Make alternate winstation depend on non-native theme. r=handyman
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: 98 Branch → 99 Branch

Comment on attachment 9263461 [details]
Bug 1754940: Make alternate winstation depend on non-native theme. r=handyman!

Beta/Release Uplift Approval Request

  • User impact if declined: Users who have flipped the non-native theme pref, will have badly rendered controls.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Go to a page with form controls, especially radio buttons and check boxes, for example: https://www.w3schools.com/html/html_forms.asp
    Flip the pref widget.non-native-theme.enabled to false and reload the page.
    Radio buttons render incorrectly. They are probably too small although the effect may vary depending on your monitor and OS theme set up.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple change that effectively reverts regressing change when pref is false.
  • String changes made/needed: None
Attachment #9263461 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9263461 [details]
Bug 1754940: Make alternate winstation depend on non-native theme. r=handyman!

Fix for a 98 regression, uplift approved for 98 beta 5, thanks.

Attachment #9263461 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I've verified the fix on Firefox Nightly 99.0a1 (20220214092817)

QA Whiteboard: [qa-triaged]

I've also verified the fix on Firefox Beta 98.0b5 (20220215194438)

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: