Bug 1754940: Make alternate winstation depend on non-native theme. r=handyman a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D138527